--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="https://namedeveloper.github.io/portfolio//public.html" class="btn">Public Releases</a>
         <a href="{{ site.github.repository_url }}" class="btn">Private Releases</a>
+        <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">Planned Releases</a>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
