--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <a href="https://namedeveloper.github.io/portfolio//public.html" class="btn">Public Releases</a>
         <a href="{{ site.github.repository_url }}" class="btn">Private Releases</a>
         <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">Planned Releases</a>
-        <button class="custom-btn btn-5"><span>Read More</span></button>
+        <div class="button"><span>Click Me</span></div>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
