--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="../../../resources/_sass/style.scss">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../../assets/css/style.scss">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
@@ -23,7 +23,11 @@
         <a href="https://namedeveloper.github.io/portfolio//public.html" class="btn">Public Releases</a>
         <a href="{{ site.github.repository_url }}" class="btn">Private Releases</a>
         <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">Planned Releases</a>
-        <div class="button"><span>Click Me</span></div>
+        <button style="--content: 'Hover me!';">
+          <div class="left"></div>
+          Hover me!
+          <div class="right"></div>
+        </button>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
