--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -1,644 +1,389 @@
+@import "normalize";
+@import "rouge-github";
+@import "variables";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+
+@mixin large {
+  @media screen and (min-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
+
+@mixin medium {
+  @media screen and (min-width: #{$medium-breakpoint}) and (max-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
+
+@mixin small {
+  @media screen and (max-width: #{$medium-breakpoint}) {
+    @content;
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-    background: #e0e5ec;
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: $body-text-color;
+}
+
+#skip-to-content {
+  height: 1px;
+  width: 1px;
+  position: absolute;
+  overflow: hidden;
+  top: -10px;
+
+  &:focus {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    height: auto;
+    width: auto;
+    background: invert($body-link-color);
+    outline: thick solid invert($body-link-color);
   }
-  h1 {
-    position: relative;
-    text-align: center;
-    color: #353535;
-    font-size: 50px;
-    font-family: "Cormorant Garamond", serif;
+}
+
+a {
+  color: $body-link-color;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.btn {
+  display: inline-block;
+  margin-bottom: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.08);
+  border-color: rgba(255, 255, 255, 0.2);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0.3rem;
+  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+
+  &:hover {
+    color: rgba(255, 255, 255, 0.8);
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-color: rgba(255, 255, 255, 0.3);
+  }
+
+  + .btn {
+    margin-left: 1rem;
+  }
+
+  @include large {
+    padding: 0.75rem 1rem;
+  }
+
+  @include medium {
+    padding: 0.6rem 0.9rem;
+    font-size: 0.9rem;
+  }
+
+  @include small {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    font-size: 0.9rem;
+
+    + .btn {
+      margin-top: 1rem;
+      margin-left: 0;
+    }
+  }
+}
+
+.gradient_bg {
+  color: $header-heading-color;
+  text-align: center;
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color); 
+}
+
+.page-header {
+  color: $header-heading-color;
+  text-align: center;
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-image: url(https://cdn.discordapp.com/attachments/690648795763048559/874303053786935316/unknown.png);
+  background-repeat: no-repeat;
+  background-position: 0px;
+
+  @include large {
+    padding: 5rem 6rem;
+  }
+
+  @include medium {
+    padding: 3rem 4rem;
+  }
+
+  @include small {
+    padding: 2rem 1rem;
+  }
+
+}
+
+.project-name {
+  margin-top: 0;
+  margin-bottom: 0.1rem;
+
+  @include large {
+    font-size: 3.25rem;
+  }
+
+  @include medium {
+    font-size: 2.25rem;
+  }
+
+  @include small {
+    font-size: 1.75rem;
+  }
+}
+
+.project-tagline {
+  margin-bottom: 2rem;
+  font-weight: normal;
+  opacity: 0.7;
+
+  @include large {
+    font-size: 1.25rem;
+  }
+
+  @include medium {
+    font-size: 1.15rem;
+  }
+
+  @include small {
+    font-size: 1rem;
+  }
+}
+
+.main-content {
+  word-wrap: break-word;
+
+  :first-child {
+    margin-top: 0;
+  }
+
+  @include large {
+    max-width: 64rem;
+    padding: 2rem 6rem;
+    margin: 0 auto;
+    font-size: 1.1rem;
+  }
+
+  @include medium {
+    padding: 2rem 4rem;
+    font-size: 1.1rem;
+  }
+
+  @include small {
+    padding: 2rem 1rem;
+    font-size: 1rem;
   }
   
-  p {
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    text-align: center;
-    font-size: 18px;
-    color: #676767;
-  }
-  .frame {
-    width: 90%;
-    margin: 40px auto;
-    text-align: center;
-  }
-  button {
-    margin: 20px;
-    outline: none;
-  }
-  .custom-btn {
-    width: 130px;
-    height: 40px;
-    padding: 10px 25px;
-    border: 2px solid #000;
-    font-family: 'Lato', sans-serif;
-    font-weight: 500;
-    background: transparent;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
+  kbd {
+    background-color: #fafbfc;
+    border: 1px solid #c6cbd1;
+    border-bottom-color: #959da5;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 #959da5;
+    color: #444d56;
     display: inline-block;
+    font-size: 11px;
+    line-height: 10px;
+    padding: 3px 5px;
+    vertical-align: middle;
   }
-  
-  /* 1 */
-  .btn-1 {
-    transition: all 0.3s ease;
+
+  img {
+    max-width: 100%;
   }
-  .btn-1:hover {
-     box-shadow:
-     -7px -7px 20px 0px #fff9,
-     -4px -4px 5px 0px #fff9,
-     7px 7px 20px 0px #0002,
-     4px 4px 5px 0px #0001;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-weight: normal;
+    color: $section-headings-color;
   }
-  
-  /* 2 */
-  .btn-2 {
-    
+
+  p {
+    margin-bottom: 1em;
   }
-  .btn-2:after {
-    position: absolute;
-    content: "";
-    top: 5px;
-    left: 6px;
-    width: 90%;
-    height: 70%;
-    border: 1px solid #000;
-    opacity: 0;
-    transition: all 0.3s ease;
+
+  code {
+    padding: 2px 4px;
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-size: 0.9rem;
+    color: $code-text-color;
+    background-color: $code-bg-color;
+    border-radius: 0.3rem;
   }
-  .btn-2:hover:after {
-    opacity: 1;
+
+  pre {
+    padding: 0.8rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    color: $code-text-color;
+    word-wrap: normal;
+    background-color: $code-bg-color;
+    border: solid 1px $border-color;
+    border-radius: 0.3rem;
+
+    > code {
+      padding: 0;
+      margin: 0;
+      font-size: 0.9rem;
+      color: $code-text-color;
+      word-break: normal;
+      white-space: pre;
+      background: transparent;
+      border: 0;
+    }
   }
-  
-  
-  /* 3 */
-  .btn-3 {
-    line-height: 39px;
+
+  .highlight {
+    margin-bottom: 1rem;
+
+    pre {
+      margin-bottom: 0;
+      word-break: normal;
+    }
+  }
+
+  .highlight pre,
+  pre {
+    padding: 0.8rem;
+    overflow: auto;
+    font-size: 0.9rem;
+    line-height: 1.45;
+    border-radius: 0.3rem;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  pre code,
+  pre tt {
+    display: inline;
+    max-width: initial;
     padding: 0;
+    margin: 0;
+    overflow: initial;
+    line-height: inherit;
+    word-wrap: normal;
+    background-color: transparent;
+    border: 0;
+
+    &:before,
+    &:after {
+      content: normal;
+    }
   }
-  .btn-3:hover{
-    background: transparent;
-    color: #000;
+
+  ul,
+  ol {
+    margin-top: 0;
   }
-  .btn-3 span {
-    position: relative;
+
+  blockquote {
+    padding: 0 1rem;
+    margin-left: 0;
+    color: $blockquote-text-color;
+    border-left: 0.3rem solid $border-color;
+
+    > :first-child {
+      margin-top: 0;
+    }
+
+    > :last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  table {
     display: block;
     width: 100%;
-    height: 100%;
+    overflow: auto;
+    word-break: normal;
+    word-break: keep-all; // For Firefox to horizontally scroll wider tables.
+    -webkit-overflow-scrolling: touch;
+
+    th {
+      font-weight: bold;
+    }
+
+    th,
+    td {
+      padding: 0.5rem 1rem;
+      border: 1px solid $table-border-color;
+    }
   }
-  .btn-3:before,
-  .btn-3:after {
-    position: absolute;
-    content: "";
-    left: 0;
-    top: 0;
-    background: #000;
-    transition: all 0.3s ease;
+
+  dl {
+    padding: 0;
+
+    dt {
+      padding: 0;
+      margin-top: 1rem;
+      font-size: 1rem;
+      font-weight: bold;
+    }
+
+    dd {
+      padding: 0;
+      margin-bottom: 1rem;
+    }
   }
-  .btn-3:before {
-    height: 0%;
-    width: 2px;
-  }
-  .btn-3:after {
-    width: 0%;
+
+  hr {
     height: 2px;
-  }
-  .btn-3:hover:before {
-    height: 100%;
-  }
-  .btn-3:hover:after {
-    width: 100%;
-  }
-  .btn-3 span:before,
-  .btn-3 span:after {
-    position: absolute;
-    content: "";
-    right: 0;
-    bottom: 0;
-    background: #000;
-    transition: all 0.3s ease;
-  }
-  .btn-3 span:before {
-    width: 2px;
-    height: 0%;
-  }
-  .btn-3 span:after {
-    width: 0%;
-    height: 2px;
-  }
-  .btn-3 span:hover:before {
-    height: 100%;
-  }
-  .btn-3 span:hover:after {
-    width: 100%;
-  }
-  
-  /* 4 */
-  .btn-4 {
-    position: relative;
-    color: #000;
-    z-index: 2;
-    line-height: 40px;
     padding: 0;
-  }
-  .btn-4:hover{
-    border: none;
-  }
-  .btn-4:before,
-  .btn-4:after {
-    position: absolute;
-    content: "";
-    width: 0%;
-    height: 0%;
-    border: 2px solid;
-    z-index: -1;
-    transition: all 0.3s ease;
-  }
-  .btn-4:before {
-    top: 0;
-     left: 0;
-     border-bottom-color: transparent;
-     border-right-color: transparent;
-     border-top-color: #000;
-     border-left-color: #000;
-  }
-  .btn-4:after{
-     bottom: 0;
-     right: 0;
-     border-top-color: transparent;
-     border-left-color: transparent;
-     border-bottom-color: #000;
-     border-right-color: #000;
-  }
-  .btn-4:hover:before,
-  .btn-4:hover:after {
-    border-color: #000;
-    height: 100%;
-    width: 100%;
-  }
-  
-  
-  
-  /* 5 */
-  .btn-5 {
-    background: #000;
-    color: #fff;
-    line-height: 42px;
-    padding: 0;
-    border: none;
-  }
-  .btn-5:hover {
-    background: transparent;
-    color: #000;
-     box-shadow:
-     -7px -7px 20px 0px #fff9,
-     -4px -4px 5px 0px #fff9,
-     7px 7px 20px 0px #0002,
-     4px 4px 5px 0px #0001;
-  }
-  .btn-5:before,
-  .btn-5:after{
-    content:'';
-    position:absolute;
-    top:0;
-    right:0;
-    height:2px;
-    width:0;
-    background: #000;
-    transition:400ms ease all;
-  }
-  .btn-5:after{
-    right:inherit;
-    top:inherit;
-    left:0;
-    bottom:0;
-  }
-  .btn-5:hover:before,
-  .btn-5:hover:after{
-    width:100%;
-    transition:800ms ease all;
-  }
-  
-  
-  /* 6 */
-  .btn-6 {
-     background: #000;
-    color: #fff;
-    line-height: 42px;
-    padding: 0;
-    border: none;
-  }
-  .btn-6 span {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  .btn-6:before,
-  .btn-6:after {
-    position: absolute;
-    content: "";
-    height: 0%;
-    width: 2px;
-    background: #000;
-  }
-  .btn-6:before {
-    right: 0;
-    top: 0;
-    transition: all 500ms ease;
-  }
-  .btn-6:after {
-    left: 0;
-    bottom: 0;
-    transition: all 500ms ease;
-  }
-  .btn-6:hover{
-    color: #000;
-    background: transparent;
-  }
-  .btn-6:hover:before {
-    transition: all 500ms ease;
-    height: 100%;
-  }
-  .btn-6:hover:after {
-    transition: all 500ms ease;
-    height: 100%;
-  }
-  .btn-6 span:before,
-  .btn-6 span:after {
-    position: absolute;
-    content: "";
-    background: #000;
-  }
-  .btn-6 span:before {
-    left: 0;
-    top: 0;
-    width: 0%;
-    height: 2px;
-    transition: all 500ms ease;
-  }
-  .btn-6 span:after {
-    right: 0;
-    bottom: 0;
-    width: 0%;
-    height: 2px;
-    transition: all 500ms ease;
-  }
-  .btn-6 span:hover:before {
-    width: 100%;
-  }
-  .btn-6 span:hover:after {
-    width: 100%;
-  }
-  
-  /* 7 */
-  .btn-7 {
-     background: #000;
-    color: #fff;
-    line-height: 42px;
-    padding: 0;
-    border: none;
-    z-index: 1;
-     -webkit-transition: all 0.3s linear;
-      transition: all 0.3s linear;
-  }
-  .btn-7:hover {
-    background: transparent;
-    color: #000;
-  }
-  .btn-7:before,
-  .btn-7:after {
-    position: absolute;
-    content: "";
-    left: 0;
-    width: 100%;
-    height: 50%;
-    right: 0;
-    z-index: -1;
-    background: #000;
-    transition: all 0.3s ease;
-  }
-  .btn-7:before {
-    top: 0;
-  }
-  .btn-7:after {
-    bottom: 0;
-  }
-  .btn-7:hover:before,
-  .btn-7:hover:after {
-    height: 0;
-    background-color: #000;
-  }
-  
-  
-  
-  
-  /* 8 */
-  .btn-8 {
-     line-height: 40px;
-    padding: 0;
-    background: transparent;
-    position: relative;
-    z-index: 2;
-    color: #fff;
-    -webkit-perspective: 300px;
-    perspective: 300px;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
-  .btn-8:hover{
-    color: #000;
-  }
-  .btn-8:after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    z-index: -1;
-    -webkit-transform-origin: center bottom;
-    transform-origin: center bottom;
-    -webkit-transform: rotateX(0);
-    transform: rotateX(0);
-    transition: all 0.3s ease;
-  }
-  .btn-8:hover:after {
-    -webkit-transform: rotateX(-180deg);
-    transform: rotateX(-180deg);
-  }
-    
-  
-  /* 9 */
-  .btn-9 {
-    z-index: 2;
-    transition: all 0.3s ease;
-    overflow: hidden;
-  }
-  .btn-9:after {
-    position: absolute;
-    content: " ";
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition: all 0.3s ease;
-  }
-  .btn-9:hover {
-    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-                -4px -4px 6px 0 rgba(116, 125, 136, .2), 
-      inset -4px -4px 6px 0 rgba(255,255,255,.5),
-      inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
-    color: #fff;
-  }
-  .btn-9:hover:after {
-    -webkit-transform: scale(2) rotate(180deg);
-    transform: scale(2) rotate(180deg);
-    background: #000;
-    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-                -4px -4px 6px 0 rgba(116, 125, 136, .2), 
-      inset -4px -4px 6px 0 rgba(255,255,255,.5),
-      inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
-  }
-  
-  /* 10 */
-  .btn-10 {
-    transition: all 0.3s ease;
-    overflow: hidden;
-  }
-  .btn-10:after {
-    position: absolute;
-    content: " ";
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    transition: all 0.3s ease;
-    -webkit-transform: scale(.1);
-    transform: scale(.1);
-  }
-  .btn-10:hover {
-    color: #fff;
-  }
-  .btn-10:hover:after {
-    background: #000;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-  
-  /* 11 */
-  .btn-11 {
-    overflow: hidden;
-    transition: all 0.3s ease;
-  }
-  .btn-11:hover {
-     background: #000;
-    color: #fff;
-  }
-  .btn-11:before {
-      position: absolute;
-      content: '';
-      display: inline-block;
-      top: -180px;
-      left: 0;
-      width: 30px;
-      height: 100%;
-      background-color: #fff;
-      animation: shiny-btn1 3s ease-in-out infinite;
-  }
-  .btn-11:active{
-    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.3),
-                -4px -4px 6px 0 rgba(116, 125, 136, .2), 
-      inset -4px -4px 6px 0 rgba(255,255,255,.2),
-      inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
-  }
-  
-  
-  @-webkit-keyframes shiny-btn1 {
-      0% { -webkit-transform: scale(0) rotate(45deg); opacity: 0; }
-      80% { -webkit-transform: scale(0) rotate(45deg); opacity: 0.5; }
-      81% { -webkit-transform: scale(4) rotate(45deg); opacity: 1; }
-      100% { -webkit-transform: scale(50) rotate(45deg); opacity: 0; }
-  }
-  
-  
-  /* 12 */
-  .btn-12{
-    position: relative;
-    right: 20px;
-    bottom: 20px;
-    border:none;
-    width: 130px;
-    height: 40px;
-    line-height: 40px;
-    -webkit-perspective: 230px;
-    perspective: 230px;
-  }
-  .btn-12 span {
-    display: block;
-    position: absolute;
-    width: 130px;
-    height: 40px;
-    border: 2px solid #000;
-    margin:0;
-    text-align: center;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: all .3s;
-    transition: all .3s;
-  }
-  .btn-12 span:nth-child(1) {
-    box-shadow:
-     -7px -7px 20px 0px #fff9,
-     -4px -4px 5px 0px #fff9,
-     7px 7px 20px 0px #0002,
-     4px 4px 5px 0px #0001;
-    -webkit-transform: rotateX(90deg);
-    -moz-transform: rotateX(90deg);
-    transform: rotateX(90deg);
-    -webkit-transform-origin: 50% 50% -20px;
-    -moz-transform-origin: 50% 50% -20px;
-    transform-origin: 50% 50% -20px;
-  }
-  .btn-12 span:nth-child(2) {
-    -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    transform: rotateX(0deg);
-    -webkit-transform-origin: 50% 50% -20px;
-    -moz-transform-origin: 50% 50% -20px;
-    transform-origin: 50% 50% -20px;
-  }
-  .btn-12:hover span:nth-child(1) {
-    -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    transform: rotateX(0deg);
-  }
-  .btn-12:hover span:nth-child(2) {
-    background: #e0e5ec;
-    color: #e0e5ec;
-    -webkit-transform: rotateX(-90deg);
-    -moz-transform: rotateX(-90deg);
-    transform: rotateX(-90deg);
-  }
-  
-  
-  /* 13 */
-  .btn-13 {
-     background: #000;
-    color: #fff;
-    z-index: 1;
-  }
-  .btn-13:after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-     background: #e0e5ec;
-    transition: all 0.3s ease;
-  }
-  .btn-13:hover {
-    color: #000;
-  }
-  .btn-13:hover:after {
-    top: 0;
-    height: 100%;
-  }
-  .btn-13:active {
-    top: 2px;
-  }
-  
-  
-  /* 14 */
-  .btn-14 {
-     background: #000;
-    color: #fff;
-    z-index: 1;
-  }
-  .btn-14:after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 0;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background: #e0e5ec;
-    transition: all 0.3s ease;
-  }
-  .btn-14:hover {
-    color: #000;
-  }
-  .btn-14:hover:after {
-    top: auto;
-    bottom: 0;
-    height: 100%;
-  }
-  .btn-14:active {
-    top: 2px;
-  }
-  
-  /* 15 */
-  .btn-15 {
-     background: #000;
-    color: #fff;
-    z-index: 1;
-  }
-  .btn-15:after {
-    position: absolute;
-    content: "";
-    width: 0;
-    height: 100%;
-    top: 0;
-    right: 0;
-    z-index: -1;
-     background: #e0e5ec;
-    transition: all 0.3s ease;
-  }
-  .btn-15:hover {
-    color: #000;
-  }
-  .btn-15:hover:after {
-    left: 0;
-    width: 100%;
-  }
-  .btn-15:active {
-    top: 2px;
-  }
-  
-  
-  /* 16 */
-  .btn-16 {
-     background: #000;
-    color: #fff;
-    z-index: 1;
-  }
-  .btn-16:after {
-    position: absolute;
-    content: "";
-    width: 0;
-    height: 100%;
-    top: 0;
-    left: 0;
-    direction: rtl;
-    z-index: -1;
-    background: #e0e5ec;
-    transition: all 0.3s ease;
-  }
-  .btn-16:hover {
-    color: #000;
-  }
-  .btn-16:hover:after {
-    left: auto;
-    right: 0;
-    width: 100%;
-  }
-  .btn-16:active {
-    top: 2px;
-  }
+    margin: 1rem 0;
+    background-color: $hr-border-color;
+    border: 0;
+  }
+}
+
+.site-footer {
+  padding-top: 2rem;
+  margin-top: 2rem;
+  border-top: solid 1px $hr-border-color;
+
+  @include large {
+    font-size: 1rem;
+  }
+
+  @include medium {
+    font-size: 1rem;
+  }
+
+  @include small {
+    font-size: 0.9rem;
+  }
+}
+
+.site-footer-owner {
+  display: block;
+  font-weight: bold;
+}
+
+.site-footer-credits {
+  color: $blockquote-text-color;
+}
