--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,16 @@
         <a href="{{ site.github.repository_url }}" class="btn">Private Releases</a>
         <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">Planned Releases</a>
         <button style="--content: 'Hover me!';">
-          <div class="left"></div>
-          Hover me!
-          <div class="right"></div>
+          <div class="buttons">
+            <h1>Simple hover effects with <code>box-shadow</code></h1>
+            <button class="fill">Fill In</button>
+            <button class="pulse">Pulse</button>
+            <button class="close">Close</button>
+            <button class="raise">Raise</button>
+            <button class="up">Fill Up</button>
+            <button class="slide">Slide</button>
+            <button class="offset">Offset</button>
+          </div>
         </button>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
