Added link to try to see if it works.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">Private Releases</a>
         <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">Planned Releases</a>
           <div class="buttons">
-            <button class="offset">Offset</button>
+            <button href="https://namedeveloper.github.io/portfolio//error404.html" class="offset">Offset</button>
           </div>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
