Testing more of this shit!!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
         <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">Planned Releases</a>
           <div class="buttons">
             <button href="https://namedeveloper.github.io/portfolio//error404.html" class="offset">Offset</button>
+            <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">testing</a>
           </div>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
