testing more sjit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">Private Releases</a>
         <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">Planned Releases</a>
           <div class="buttons">
-            <button href="https://namedeveloper.github.io/portfolio//error404.html" class="offset">Offset</button>
+            <button class="offset"> <a href="https://namedeveloper.github.io/portfolio//error404.html"> Offset</button>
             <a href="https://namedeveloper.github.io/portfolio//error404.html" class="btn">testing</a>
           </div>
       {% if site.show_downloads %}
