--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,9 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
           <div class="buttons">
-            <button class="offset"> <a href="https://namedeveloper.github.io/portfolio//public.html"></a>Public Releases</button>
+            <a href="https://namedeveloper.github.io/portfolio//public.html">
+            <button class="offset">Public Releases</button>
+            </a>
             <button class="offset"> <a href="https://namedeveloper.github.io/portfolio//error404.html"></a>Private Releases</button>
             <button class="offset"> <a href="https://namedeveloper.github.io/portfolio//error404.html"></a>Planned Releases</button>    
           </div>
