--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
     <header class="page-header" role="banner">
       <!--<h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>-->
-      <h1>page.title | ImBad <code>Visuals</code></h1>
+      <h1>{{page.title}} | ImBad <code>Visuals</code></h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
           <div class="buttons">
             <a href="https://namedeveloper.github.io/portfolio//public.html">
