Added a new button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
       <h1>{{page.title}} | ImBad <code>Visuals</code></h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
           <div class="buttons">
+            <a href="https://namedeveloper.github.io/portfolio/">
+              <button class="offset">Home</button>
+            </a>
             <a href="https://namedeveloper.github.io/portfolio//public.html">
               <button class="offset">Public Releases</button>
             </a>
