--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,13 @@
       {% endif %}
     </header>
 
-    <main id="content" class="main-content" role="main">
-      {{ content }}
-    </main>
+    <div class="wrapper">
+      <div class="background"></div>
+      <div class="foreground">
+        <main id="content" class="main-content" role="main">
+          {{ content }}
+        </main>
+      </div>
+    </div>
   </body>
 </html>
