--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -32,7 +32,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: $body-text-color;
-  filter: blur(4px);
+  //filter: blur(4px);
 }
 
 #skip-to-content {
@@ -509,4 +509,15 @@ h1 { font-weight: 400; }
 code { 
   color: #e4cb58;
   font: inherit;
+}
+
+.background {
+  filter: blur(4px);
+  position: absolute;
+  width: 100%;
+  height: 100px;
+}
+
+.foreground {
+  backdrop-filter: blur(10px)
 }
