Testing more shit

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -516,8 +516,9 @@ code {
   position: absolute;
   width: 100%;
   height: 100px;
+  background-image: url("https://theboutiqueadventurer.com/wp-content/uploads/2021/02/London-Tower-Bridge-at-Sunset.jpg");
 }
 
 .foreground {
-  backdrop-filter: blur(10px)
+  backdrop-filter: blur(10px);
 }
