Changed to solid colour to test

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -516,7 +516,8 @@ code {
   position: absolute;
   width: 100%;
   height: 100px;
-  background-image: url("https://theboutiqueadventurer.com/wp-content/uploads/2021/02/London-Tower-Bridge-at-Sunset.jpg");
+  //background-image: url("https://theboutiqueadventurer.com/wp-content/uploads/2021/02/London-Tower-Bridge-at-Sunset.jpg");
+  background-color: #ffa260; 
 }
 
 .foreground {
