--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -517,7 +517,7 @@ code {
   width: 100%;
   height: 100px;
   //background-image: url("https://theboutiqueadventurer.com/wp-content/uploads/2021/02/London-Tower-Bridge-at-Sunset.jpg");
-  background-color: #ffa260; 
+  background-color: #ffffff; 
 }
 
 .foreground {
